--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,20 @@
         <activity android:name=".Forgot_passwordActivity" />
         <activity android:name=".singupActivity" />
         <activity android:name=".LoginActivity" />
-        <activity
-            android:name=".home_pages"
-            android:label="@string/title_activity_home_pages"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".Notebook_tutorial_2" android:parentActivityName=".Notebook_tutorial_1"></activity>
+        <activity android:name=".Notebook_tutorial_1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".home_pages"
+            android:label="@string/title_activity_home_pages"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".MainActivity">
+
         </activity>
     </application>
 
