--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.android.noteapp">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,17 +13,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NoteEditActivity"></activity>
-        <activity android:name=".Edit1Activity" />
-        <activity android:name=".Edit_Page3Activity" />
-        <activity android:name=".Confirmation_messageActivity" />
-        <activity android:name=".Forgot_passwordActivity" />
-        <activity android:name=".SingupActivity" />
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".NoteEditActivity" android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".Edit1Activity" android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".Edit_Page3Activity" android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".Confirmation_messageActivity" android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".Forgot_passwordActivity" android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".SingupActivity" android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".LoginActivity" android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".Notebook_tutorial_2"
-            android:parentActivityName=".Notebook_tutorial_1"></activity>
-        <activity android:name=".Notebook_tutorial_1">
+            android:parentActivityName=".Notebook_tutorial_1"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".Notebook_tutorial_1"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,7 +36,7 @@
             android:name=".home_pages"
             android:label="@string/title_activity_home_pages"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
     </application>
